# into_the_unknown

./: .gitignore  README.md  pyproject.toml
into_the_unknown/embeddings/: download_plm_models.py  generate_embeddings.py  prottucker.py
into_the_unknown/figures/: db_statistics.ipynb
into_the_unknown/model/: lddt_prediction.py  lddt_prediction_lightning.py  linear_regression.py  train.py  utils.py
into_the_unknown/plots/: plm_barplots.py  plots.R  utils.py
into_the_unknown/prepare_data/: 1_parse_file.py  2_parse_foldseek.py  3_creat_plots.py  3_create_plots.py  mmseqs_dset.py  split_feature_for_training.py
into_the_unknown/utils/: datashader_plot.py
script/: fasta_subset.sh  run_foldseek.sh  run_pipeline.sh  subset_data.sh
