[tool.poetry]
name = "into-the-unknown"
version = "0.1.0"
description = ""
authors = ["Tobias Senoner <senoner@rostlab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
h5py = "^3.10.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
datashader = "^0.16.0"
pandas = "^2.2.1"
holoviews = "^1.18.3"
bokeh = "^3.3.4"
selenium = "^4.18.1"
dask = { extras = ["dataframe"], version = "^2024.5.1" }
tables = "^3.9.2"
pyfaidx = "^0.8.1.1"
biopython = "^1.83"
dask-expr = "^1.1.1"
ijson = "^3.2.3"
torch = "2.2"
lightning = "^2.4.0"
tensorboard = "^2.17.1"
tensorboardx = "^2.6.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
pytest = "^8.0.1"
jupyter-bokeh = "^4.0.0"
scholarly = "^1.7.11"
serpapi = "^0.1.5"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
playwright = "^1.42.0"
pyppeteer = "^2.0.0"
playwright-stealth = "^1.0.6"
plotly = "^5.22.0"
aiohttp = "^3.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
